prometheus-svc-clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-srv
  namespace: kube-ops
  labels:
    k8s-app: prometheus
spec:
  ports:
  - port: 80
    targetPort: 9090
  selector:
    k8s-app: prometheus
