prometheus-webhook-dingtalk.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-webhook-dingtalk
  namespace: kube-ops
  labels:
    app: prometheus-webhook-dingtalk
spec:
  type: ClusterIP
  selector:
    app: prometheus-webhook-dingtalk
  ports:
  - name: http
    port: 5358
    targetPort: 5358



---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: prometheus-webhook-dingtalk
  namespace: kube-ops
spec:
  template:
    metadata:
      labels:
        app: prometheus-webhook-dingtalk
    spec:
      containers:
      - name: prometheus-webhook-dingtalk
        image: timonwong/prometheus-webhook-dingtalk:latest
        args:
          - '--web.listen-address=:5358'
          - '--ding.profile=webhook=https://oapi.dingtalk.com/robot/send?access_token=c83f3a98adf27544d6c1b01cbf30674cbb18c5de63784d62ccd3a42c2c06bb2c'
          - '--ding.timeout=5s'
          - '--log.level=info'
        ports:
        - containerPort: 5358
